--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Barlow:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Barlow:300,400,600,700" rel="stylesheet">
     <!-- <link rel="img" href="%PUBLIC_URL%/assets/img"> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -26,6 +26,11 @@
         margin: 0;
         padding: 0;
         font-family: 'Barlow', sans-serif;
+      }
+      /* this is a hack for the headroom lib to prevent user from seeing 
+      the scrolling when mobile menu is open */
+      .headroom--unfixed{
+        position: fixed !important;
       }
     </style>
     <title>Aerial Chen</title>
