update meta tags in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="Online portfolio of Aerial Chen: A creator, maker and doer based in New York City." />
+    <meta name="keywords" content="aerial chen, aerial, chen, designer, portfolio, design, graphic, graphic designer, new york, new york city, nyc, website, creative" />
+    <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -33,7 +35,7 @@
         position: fixed !important;
       }
     </style>
-    <title>Aerial Chen</title>
+    <title>Aerial Chen - Portfolio Website</title>
   </head>
   <body>
     <noscript>
