add more meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
     <meta name="keywords" content="aerial chen, aerial, chen, designer, portfolio, design, graphic, graphic designer, new york, new york city, nyc, website, creative" />
     <meta name="theme-color" content="#000000" />
     <meta property="og:title" content="Aerial Chen">
+    <meta property="og:site_name" content="Aerial Chen">
+    <meta property="og:url" content="http://www.aerialchen.com/">
+    <meta property="og:type" content="website">
     <meta name="twitter:site" content="@sva_advdesign">
     <!--
       manifest.json provides metadata used when your web app is added to the
