--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
 
       gtag('config', 'UA-114986443-1');
     </script>
+    <script src="/__/firebase/6.2.3/firebase-app.js"></script>
+    <script src="/__/firebase/init.js"></script>
 
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
